// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup component renders as expected 1`] = `
<fieldset
  className="es-fieldset sc-htoDjs kAbmqn"
>
  <label
    className="es-radio sc-ifAKCX fLKiDU sc-bdVaJa yehor"
    disabled={false}
    htmlFor="test-option-1"
  >
    <input
      checked={true}
      className="sc-EHOje iFEyAP"
      disabled={false}
      id="test-option-1"
      name="test"
      onChange={[Function]}
      type="radio"
      value={0}
    />
    <span
      className="es-radio__fill sc-bZQynM cnpyBY"
      fill="#069"
    />
    Option 0
  </label>
  <label
    className="es-radio sc-ifAKCX fAXFYa sc-bdVaJa yehor"
    disabled={false}
    htmlFor="test-option-2"
  >
    <input
      checked={false}
      className="sc-EHOje iFEyAP"
      disabled={false}
      id="test-option-2"
      name="test"
      onChange={[Function]}
      type="radio"
      value={1}
    />
    <span
      className="es-radio__fill sc-bZQynM cFxFaC"
      fill="#fff"
    />
    Option 1
  </label>
  <label
    className="es-radio sc-ifAKCX fAXFYa sc-bdVaJa yehor"
    disabled={false}
    htmlFor="test-option-3"
  >
    <input
      checked={false}
      className="sc-EHOje iFEyAP"
      disabled={false}
      id="test-option-3"
      name="test"
      onChange={[Function]}
      type="radio"
      value={2}
    />
    <span
      className="es-radio__fill sc-bZQynM cFxFaC"
      fill="#fff"
    />
    Option 2
  </label>
</fieldset>
`;

exports[`RadioGroup component renders as expected with legend text and extraContent 1`] = `
<fieldset
  className="es-fieldset sc-htoDjs kAbmqn"
>
  <legend
    className="es-fieldset__legend sc-gzVnrw fEWCfG"
  >
    Test legend
  </legend>
  Extra Content!
  <label
    className="es-radio sc-ifAKCX fAXFYa sc-bdVaJa yehor"
    disabled={false}
    htmlFor="test-option-1"
  >
    <input
      checked={false}
      className="sc-EHOje iFEyAP"
      disabled={false}
      id="test-option-1"
      name="test"
      onChange={[Function]}
      type="radio"
      value={0}
    />
    <span
      className="es-radio__fill sc-bZQynM cFxFaC"
      fill="#fff"
    />
    Option 0
  </label>
  <label
    className="es-radio sc-ifAKCX fAXFYa sc-bdVaJa yehor"
    disabled={false}
    htmlFor="test-option-2"
  >
    <input
      checked={false}
      className="sc-EHOje iFEyAP"
      disabled={false}
      id="test-option-2"
      name="test"
      onChange={[Function]}
      type="radio"
      value={1}
    />
    <span
      className="es-radio__fill sc-bZQynM cFxFaC"
      fill="#fff"
    />
    Option 1
  </label>
  <label
    className="es-radio sc-ifAKCX fAXFYa sc-bdVaJa yehor"
    disabled={false}
    htmlFor="test-option-3"
  >
    <input
      checked={false}
      className="sc-EHOje iFEyAP"
      disabled={false}
      id="test-option-3"
      name="test"
      onChange={[Function]}
      type="radio"
      value={2}
    />
    <span
      className="es-radio__fill sc-bZQynM cFxFaC"
      fill="#fff"
    />
    Option 2
  </label>
</fieldset>
`;
